src/test/deca/syntax/invalid/without_class/multiple_variable_decl_with_error.deca
// Description:
//    Test mutiple variable declaration with : between two variables 	  
//
// Resultats:
//    Syntax Error
//    line 8
{
    int a,b,c,d,e,f,g,h,i,j,l;m,n,o,p,q,r,s,t,u,v,w,x,y,z;
}